--- a/style.css
+++ b/style.css
@@ -1,19 +1,88 @@
 h1{
+    background-color: azure;
     text-align: center;
-    background-color: rgb(39, 185, 190);
 
 }
 
 div{
-    background-color: burlywood;
+    background-color:  rgb(2, 26, 27);
     padding: 100px;
     text-align: center
     
 }
 body{
-    background-color: rgb(0, 183, 255);
+    background-color: rgb(131, 163, 175);
 }
-p{
-    text-align: center;
-    font-size: 30px ;
+
+    nav{
+        text-align: center;
+        
+       
+       
+        
+    }
+    a{
+        text-decoration: none;
+       margin: 0 10px;
+       font-size: large;
+       border-top: 1px solid azure;
+       border-bottom: 1px solid azure;
+       color: azure;
+       
+    }
+    header{
+        display: flex;
+        justify-content: space-around;
+        background-color: rgb(2, 26, 27); 
+        align-items: center;
+        padding: 10px;
+    }
+
+    h2{
+        color: azure;
+       font-family: sans-serif;
+       font-size: xx-large;
+       text-align: justify;
+       font-size: 65px;
+       margin-bottom: 200px;
+        
+      
+       
+    }
+    p{
+    color: azure;
+    padding: 1px;
+    margin-top: 100px;
+    font-size: x-large;
+    font-family: monospace;
     
+    
+    
+}
+    
+li{
+    color: azure;
+    
+    
+}
+.fitter{
+    display: flex;
+    padding: 200px;
+    
+}
+.instagram{
+    height: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50px;
+}
+footer{
+    background-color: black;
+}
+q{
+    color: azure;
+    padding: 100px;
+    font-family: fantasy;
+    font-size: x-large;
+}
