--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ h1{
 }
 
 div{
-    background-color:  rgb(2, 26, 27);
+    background-color:  rgb(57, 140, 143);
     padding: 100px;
     text-align: center
     
 }
 body{
-    background-color: rgb(131, 163, 175);
+    background-color: rgb(7, 34, 44);
 }
 
     nav{
@@ -22,9 +22,9 @@ body{
         
     }
     a{
-        text-decoration: none;
+       text-decoration: none;
        margin: 0 10px;
-       font-size: large;
+       font-size: larger;
        border-top: 1px solid azure;
        border-bottom: 1px solid azure;
        color: azure;
@@ -41,10 +41,10 @@ body{
     h2{
         color: azure;
        font-family: sans-serif;
-       font-size: xx-large;
-       text-align: justify;
-       font-size: 65px;
-       margin-bottom: 200px;
+       text-align: center;
+       font-size: 100px;
+       margin-bottom: 300px;
+       border: 5px solid;
         
       
        
@@ -54,7 +54,7 @@ body{
     padding: 1px;
     margin-top: 100px;
     font-size: x-large;
-    font-family: monospace;
+    font-family:cursive
     
     
     
@@ -66,8 +66,9 @@ li{
     
 }
 .fitter{
-    display: flex;
     padding: 200px;
+    text-align: center;
+    align-items: center;
     
 }
 .instagram{
@@ -81,8 +82,22 @@ footer{
     background-color: black;
 }
 q{
-    color: azure;
-    padding: 100px;
+    color: rgb(0, 0, 0);
+    
     font-family: fantasy;
-    font-size: x-large;
+    font-size: 30px;
+    
+}
+img{
+    height: 600px;
+    padding: 10px;
+    border: 10px dotted;
+    
+}
+ul{
+    background-color: rgb(141, 141, 136);
+    padding: 10px;
+}
+li{
+    background-color: rgb(141, 141, 136) ;
 }
