--- a/style.css
+++ b/style.css
@@ -45,30 +45,34 @@ body{
        font-size: 100px;
        margin-bottom: 300px;
        border: 5px solid;
+       
         
       
        
     }
     p{
-    color: azure;
+    color: rgb(2, 14, 14);
     padding: 1px;
-    margin-top: 100px;
-    font-size: x-large;
-    font-family:cursive
+    margin-top: 80px;
+    font-size: 35px;
+    font-family:cursive;
+    margin-bottom: 200px;
+    
     
     
     
 }
     
 li{
-    color: azure;
-    
-    
+    color: rgb(0, 0, 0);
+    font-size: 30px;
+    font-family: monospace;
 }
 .fitter{
-    padding: 200px;
+    padding: 300px;
     text-align: center;
     align-items: center;
+    
     
 }
 .instagram{
@@ -83,15 +87,20 @@ footer{
 }
 q{
     color: rgb(0, 0, 0);
-    
     font-family: fantasy;
     font-size: 30px;
+    text-align: center;
+   display: inline-block;
+    
+    
     
 }
 img{
     height: 600px;
     padding: 10px;
     border: 10px dotted;
+    margin-left: 100px;
+    margin-top: 100px;
     
 }
 ul{
@@ -100,4 +109,14 @@ ul{
 }
 li{
     background-color: rgb(141, 141, 136) ;
+}
+.Portfolio{
+    font-size:50px;
+    margin: 0px;
+    
+}
+.newp{
+    padding: 0%;
+    color: azure;
+   
 }
