--- a/style.css
+++ b/style.css
@@ -120,3 +120,10 @@ li{
     color: azure;
    
 }
+.linked{
+    height: 55px;
+    width: 55px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
