--- a/style.css
+++ b/style.css
@@ -5,14 +5,13 @@ h1{
 }
 
 div{
-    background-color:  rgb(57, 140, 143);
+   
     padding: 100px;
     text-align: center
     
 }
-body{
-    background-color: rgb(7, 34, 44);
-}
+
+
 
     nav{
         text-align: center;
@@ -104,12 +103,12 @@ img{
     
 }
 ul{
-    background-color: rgb(141, 141, 136);
+   
     padding: 10px;
 }
-li{
-    background-color: rgb(141, 141, 136) ;
-}
+
+    
+
 .Portfolio{
     font-size:50px;
     margin: 0px;
@@ -126,4 +125,22 @@ li{
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
