--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ div{
        font-size: 100px;
        margin-bottom: 300px;
        border: 5px solid;
+       flex-grow: 1;
        
         
       
@@ -68,11 +69,12 @@ li{
     font-family: monospace;
 }
 .fitter{
-    padding: 300px;
+    
+    display: flex;
+    justify-content:space-evenly;
     text-align: center;
+    flex-grow: 1;
     align-items: center;
-    
-    
 }
 .instagram{
     height: 90px;
@@ -87,10 +89,8 @@ footer{
 q{
     color: rgb(0, 0, 0);
     font-family: fantasy;
-    font-size: 30px;
-    text-align: center;
-   display: inline-block;
-    
+    font-size: 20px;
+
     
     
 }
@@ -128,9 +128,10 @@ ul{
 }
 body {
 	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
+	background-size: 1000% 1000%;
 	animation: gradient 15s ease infinite;
-	height: 100vh;
+	height: 100%;
+    background-repeat: no-repeat;
 }
 
 @keyframes gradient {
@@ -143,4 +144,10 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+.submission2{
+    text-align: center;
+    color: bisque;
+
 }
