--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ div{
         color: azure;
        font-family: sans-serif;
        text-align: center;
-       font-size: 100px;
+       font-size: 200%;
        margin-bottom: 300px;
        border: 5px solid;
        flex-grow: 1;
@@ -53,10 +53,9 @@ div{
     p{
     color: rgb(2, 14, 14);
     padding: 1px;
-    margin-top: 80px;
-    font-size: 35px;
+    font-size: 200%;
     font-family:cursive;
-    margin-bottom: 200px;
+    margin-bottom: 20%;
     
     
     
@@ -95,7 +94,7 @@ q{
     
 }
 img{
-    height: 600px;
+    height: 100px;
     padding: 10px;
     border: 10px dotted;
     margin-left: 100px;
@@ -105,6 +104,7 @@ img{
 ul{
    
     padding: 10px;
+    font-size: 50%;
 }
 
     
@@ -132,6 +132,7 @@ body {
 	animation: gradient 15s ease infinite;
 	height: 100%;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 @keyframes gradient {
@@ -150,4 +151,35 @@ body {
     text-align: center;
     color: bisque;
 
+}
+.contact-form{
+    font-size: 200%;
+}
+
+input{
+
+    height: 30%;
+}
+
+@media screen and ( max-width: 500px) { 
+    input {
+        width: 80%;
+    }
+    .fitter{
+    flex-direction: column;
+    }
+    
+    
+}
+
+.mypic{
+
+    height: 40%;
+}
+.newp{
+    font-size: 150%;
+}
+
+li{
+    font-size: 200%;
 }
