--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ div{
     p{
     color: rgb(2, 14, 14);
     padding: 1px;
-    font-size: 200%;
+    font-size: 100%;
     font-family:cursive;
     margin-bottom: 20%;
     
@@ -94,10 +94,9 @@ q{
     
 }
 img{
-    height: 100px;
+    height: 150px;
     padding: 10px;
     border: 10px dotted;
-    margin-left: 100px;
     margin-top: 5px;
     
 }
@@ -174,12 +173,14 @@ input{
 
 .mypic{
 
-    height: 40%;
+    height: 250px;
+    margin-top: 20%;
+    
 }
 .newp{
-    font-size: 150%;
+    font-size: 100%;
 }
 
 li{
-    font-size: 200%;
+    font-size: 300%;
 }
